deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
  labels:
    app: demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: krishnarj/demo:latest
          ports:
            - containerPort: 8080










#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: demo-app-deployment
#  labels:
#    app: demo-app
#spec:
#  replicas: 3
#  selector:
#    matchLabels:
#      app: demo-app
#  template:
#    metadata:
#      labels:
#        app: demo-app
#    spec:
#      containers:
#        - name: demo-app
#          image: krishnarj/demo:latest
#          ports:
#            - containerPort: 8080
