ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: demo-app
  rules:
    - http:
        paths:
          - path: /employees
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 8080
